--- a/ArcShot/package.json
+++ b/ArcShot/package.json
@@ -9,11 +9,30 @@
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "mongoose"   : "~3.6.2",
+    "mongoose": "~3.6.2",
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-     "method-override": "~2.3.5"
-  }
+    "method-override": "~2.3.5",
+    "bcrypt-nodejs": "0.0.3",
+    "passport" : "0.3.2",
+    "passport-facebook": "2.1.0",
+    "passport-strategy": "1.0.0"
+  },
+  "description": "BeerPong WebApp",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jordoser/ArcShot/tree/master/ArcShot"
+  },
+  "keywords": [
+    "Beer",
+    "Pong",
+    "Mean",
+    "Stack"
+  ],
+  "author": "Jordoser",
+  "license": "BSD-2-Clause"
 }
